--- a/TimeWebSocketClient.html
+++ b/TimeWebSocketClient.html
@@ -27,7 +27,7 @@
 
 		try {
 
-			var host = "w//localhost:8000/";
+			var host = "http://localhost:8000/TimeWebSocketClient.html";
 			console.log("Host:", host);
 
 			var s = new WebSocket(host);
